<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="rules">The goal is to get 3 in a row and each person must switch taking turns. In order to win, the 3 symbols must all connect in a straight line in one direction, horizontal, vertical or diagonally.</string>
    <string name="ok">Ok</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="write_your_names_and_how_many_rounds_you_want_to_play">Write your names and how many rounds you want to play</string>
    <string name="number_of_rounds">Number of rounds</string>
    <string name="start">Start</string>
    <string name="write_names_to_play_toast">Give names and number of rounds</string>
    <string name="rounds_must_be_positive_toast">Number of rounds must be positive and names different</string>
    <string name="p1_name_default">Player 1</string>
    <string name="p2_name_default">Player 2</string>
    <string name="rounds">Rounds</string>
    <string name="draw">Draw!</string>
    <string name="moves_per_match">Moves per match:</string>
    <string name="new_game">New game</string>
    <string name="exit">Exit</string>
    <string name="name_won">%1$s won!</string>
    <string name="name_lost">%1$s lost.</string>
    <string name="won_rounds_out_of">%1$s won %2$d out of %3$d matches.</string>
    <string name="both_won_rounds">Both %1$s and %2$s won %3$d out of %4$d matches</string>
    <string name="round_moves">Round %1$d: %2$d moves</string>
    <string name="summary">Summary</string>
    <string name="wins_info">%1$s:  %2$d      %3$s: %4$d</string>
    <string name="round_info">Round %1$d/%2$d</string>
    <string name="symbol_name">%1$s: %2$s</string>
</resources>
